--- a/views/drum.handlebars
+++ b/views/drum.handlebars
@@ -1,65 +1,72 @@
+<button class = "button expanded large" id = "category-header">Drum and Percussion Category</button>
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
-        <div class="cell large-4" id = "piano-1">   
-            <div class="row">
-                <div class="media-object">
-                    <div class="media-object-section">
-                        <div class="thumbnail">
-                            <img src="/images/drum-percussion/full-drum-set.JPG" alt="Image" height="300" width="300">
+       <div id= "information-btn">
+            <div class="cell large-4" id = "piano-1">   
+                <div class="row">
+                    <div class="media-object">
+                        <div class="media-object-section">
+                            <div class="thumbnail">
+                                <img src="/images/drum-percussion/full-drum-set.JPG" alt="Image" height="300" width="300">
+                            </div>
+                        </div>                   
+                        <div class="media-object-section" id = "piano-information">
+                            <h4>SKU: 400101</h4>
+                            <h3 id = "item-name">Full Drum Set</h3>
+                            <h4>Price: $3029.99</h4>
+                            <h4>In Stock: 01</h4>
                         </div>
-                    </div>                   
-                    <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 10401</h4>
-                        <h3 id = "item-name">Full Drum Set</h3>
-                        <h4>Price: $3029.99</h4>
-                        <h4>In Stock: 01</h4>
-                    </div>
-                </div> 
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
-                </a>            
+                    </div>                               
+                </div>
             </div>
+            <a href="products">
+            <button id="drum-1-button" class="btn">More Information</button>
+            </a>  
         </div>
-        <div class="cell large-4" id = "piano-2">   
-            <div class="row">
-                <div class="media-object">
-                    <div class="media-object-section">
-                        <div class="thumbnail">
-                            <img src="/images/drum-percussion/percussion-6set.JPG" alt="Image" height="300" width="300">
+        <div id= "information-btn">
+            <div class="cell large-4" id = "piano-2">   
+                <div class="row">
+                    <div class="media-object">
+                        <div class="media-object-section">
+                            <div class="thumbnail">
+                                <img src="/images/drum-percussion/percussion-6set.JPG" alt="Image" height="300" width="300">
+                            </div>
+                        </div>                   
+                        <div class="media-object-section" id = "piano-information">
+                            <h4>SKU: 400111</h4>
+                            <h3 id = "item-name">Percussion 6 Set</h3>
+                            <h4>Price: $599.99</h4>
+                            <h4>In Stock: 04</h4>
                         </div>
-                    </div>                   
-                    <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 100411</h4>
-                        <h3 id = "item-name">Percussion 6 Set</h3>
-                        <h4>Price: $599.99</h4>
-                        <h4>In Stock: 04</h4>
-
-                    </div>
-                </div>
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
-                </a> 
-             </div>                  
+                    </div>                    
+                </div>                  
+            </div>
+            <a href="products">
+            <button id="drum-2-button" class="btn">More Information</button>
+            </a> 
         </div>
-        <div class="cell large-4" id = "piano-3">   
-            <div class="row">
-                <div class="media-object">
-                    <div class="media-object-section">
-                        <div class="thumbnail">
-                            <img src="/images/drum-percussion/tubano.JPG" alt="Image" height="300" width="300">
+        <div id= "information-btn">
+            <div class="cell large-4" id = "piano-3">   
+                <div class="row">
+                    <div class="media-object">
+                        <div class="media-object-section">
+                            <div class="thumbnail">
+                                <img src="/images/drum-percussion/tubano.JPG" alt="Image" height="300" width="300">
+                            </div>
+                        </div>                   
+                        <div class="media-object-section" id = "piano-information">
+                            <h4>SKU: 400121</h4>
+                            <h3 id = "item-name">Tubano</h3>
+                            <h4>Price: $229.99</h4>
+                            <h4>In Stock: 04</h4>
                         </div>
-                    </div>                   
-                    <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 100421</h4>
-                        <h3 id = "item-name">Tubano</h3>
-                        <h4>Price: $229.99</h4>
-                        <h4>In Stock: 04</h4>
                     </div>
-                </div>
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
-                </a>
-             </div>                  
+                    
+                </div>                  
+            </div>
+            <a href="products">
+            <button id="drum-3-button" class="btn">More Information</button>
+            </a>
         </div>
     </div>        
 </div>       
