--- a/views/guitar.handlebars
+++ b/views/guitar.handlebars
@@ -1,65 +1,71 @@
+<button class = "button expanded large" id = "category-header">Guitar Category</button>
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
-        <div class="cell large-4" id = "piano-1">   
-            <div class="row">
-                <div class="media-object">
-                    <div class="media-object-section">
-                        <div class="thumbnail">
-                            <img src="/images/guitar/guitar-blue.JPG" alt="Image" height="300" width="300">
+        <div id= "information-btn">
+            <div class="cell large-4" id = "piano-1">   
+                <div class="row">
+                    <div class="media-object">
+                        <div class="media-object-section">
+                            <div class="thumbnail">
+                                <img src="/images/guitar/guitar-blue.JPG" alt="Image" height="300" width="300">
+                            </div>
+                        </div>                   
+                        <div class="media-object-section" id = "piano-information">
+                            <h4>SKU: 200101</h4>
+                            <h3 id = "item-name">Guitar Blue</h3>
+                            <h4>Price: $851.99</h4>
+                            <h4>In Stock: 04</h4>
                         </div>
-                    </div>                   
-                    <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 10201</h4>
-                        <h3 id = "item-name">Guitar Blue</h3>
-                        <h4>Price: $851.99</h4>
-                        <h4>In Stock: 04</h4>
-                    </div>
-                </div> 
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
-                </a>            
+                    </div>                              
+                </div>
             </div>
+            <a href="products">
+            <button id="guitar-1-button" class="btn">More Information</button>
+            </a>   
         </div>
-        <div class="cell large-4" id = "piano-2">   
-            <div class="row">
-                <div class="media-object">
-                    <div class="media-object-section">
-                        <div class="thumbnail">
-                            <img src="/images/guitar/guitar-electric-italian.JPG" alt="Image" height="300" width="300">
+        <div id= "information-btn">   
+            <div class="cell large-4" id = "piano-2">   
+                <div class="row">
+                    <div class="media-object">
+                        <div class="media-object-section">
+                            <div class="thumbnail">
+                                <img src="/images/guitar/guitar-electric-italian.JPG" alt="Image" height="300" width="300">
+                            </div>
+                        </div>                   
+                        <div class="media-object-section" id = "piano-information">
+                            <h4>SKU: 200111</h4>
+                            <h3 id = "item-name">Guitar Electric Italian</h3>
+                            <h4>Price: $1299.99</h4>
+                            <h4>In Stock: 02</h4>
                         </div>
-                    </div>                   
-                    <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 100211</h4>
-                        <h3 id = "item-name">Guitar Electric Italian</h3>
-                        <h4>Price: $1299.99</h4>
-                        <h4>In Stock: 02</h4>
-
-                    </div>
-                </div>
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
-                </a> 
-             </div>                  
-        </div>
-        <div class="cell large-4" id = "piano-3">   
-            <div class="row">
-                <div class="media-object">
-                    <div class="media-object-section">
-                        <div class="thumbnail">
-                            <img src="/images/guitar/guitar-regular.JPG" alt="Image" height="300" width="300">
+                    </div>  
+                </div>                  
+            </div>
+            <a href="products">
+            <button id="guitar-2-button" class="btn">More Information</button>
+            </a> 
+        </div> 
+        <div id= "information-btn">    
+            <div class="cell large-4" id = "piano-3">   
+                <div class="row">
+                    <div class="media-object">
+                        <div class="media-object-section">
+                            <div class="thumbnail">
+                                <img src="/images/guitar/guitar-regular.JPG" alt="Image" height="300" width="300">
+                            </div>
+                        </div>                   
+                        <div class="media-object-section" id = "piano-information">
+                            <h4>SKU: 200121</h4>
+                            <h3 id = "item-name">Guitar Regular</h3>
+                            <h4>Price: $354.99</h4>
+                            <h4>In Stock: 07</h4>
                         </div>
-                    </div>                   
-                    <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 100221</h4>
-                        <h3 id = "item-name">Guitar Regular</h3>
-                        <h4>Price: $354.99</h4>
-                        <h4>In Stock: 07</h4>
-                    </div>
-                </div>
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
-                </a>
-             </div>                  
+                    </div>                    
+                </div>                  
+            </div>
+            <a href="products">
+            <button id="guitar-3-button" class="btn">More Information</button>
+            </a>
         </div>
     </div>        
 </div>       
