--- a/views/lesson.handlebars
+++ b/views/lesson.handlebars
@@ -1,65 +1,72 @@
+<button class = "button expanded large" id = "category-header">Lesson Category</button>
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
-        <div class="cell large-4" id = "piano-1">   
-            <div class="row">
-                <div class="media-object">
-                    <div class="media-object-section">
-                        <div class="thumbnail">
-                            <img src="/images/music-lesson/music-lesson-guitar.JPG" alt="Image" height="300" width="300">
+        <div id= "information-btn">
+            <div class="cell large-4" id = "piano-1">   
+                <div class="row">
+                    <div class="media-object">
+                        <div class="media-object-section">
+                            <div class="thumbnail">
+                                <img src="/images/music-lesson/music-lesson-guitar.JPG" alt="Image" height="300" width="300">
+                            </div>
+                        </div>                   
+                        <div class="media-object-section" id = "piano-information">
+                            <h4>SKU: 600101</h4>
+                            <h3 id = "item-name">Music Lesson Guitar</h3>
+                            <h4>Price: $899.99</h4>
+                            <h4>In Stock: 02</h4>
                         </div>
-                    </div>                   
-                    <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 10401</h4>
-                        <h3 id = "item-name">Music Lesson Guitar</h3>
-                        <h4>Price: $899.99</h4>
-                        <h4>In Stock: 02</h4>
-                    </div>
-                </div> 
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
-                </a>            
+                    </div>                               
+                </div>
             </div>
+            <a href="products">
+            <button id="lesson-1-button" class="btn">More Information</button>
+            </a> 
         </div>
-        <div class="cell large-4" id = "piano-2">   
-            <div class="row">
-                <div class="media-object">
-                    <div class="media-object-section">
-                        <div class="thumbnail">
-                            <img src="/images/music-lesson/music-lesson-trumpet.JPG" alt="Image" height="300" width="300">
+        <div id= "information-btn">
+            <div class="cell large-4" id = "piano-2">   
+                <div class="row">
+                    <div class="media-object">
+                        <div class="media-object-section">
+                            <div class="thumbnail">
+                                <img src="/images/music-lesson/music-lesson-trumpet.JPG" alt="Image" height="300" width="300">
+                            </div>
+                        </div>                   
+                        <div class="media-object-section" id = "piano-information">
+                            <h4>SKU: 600111</h4>
+                            <h3 id = "item-name">Music Lesson Trumpet</h3>
+                            <h4>Price: $799.99</h4>
+                            <h4>In Stock: 03</h4>
                         </div>
-                    </div>                   
-                    <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 100411</h4>
-                        <h3 id = "item-name">Music Lesson Trumpet</h3>
-                        <h4>Price: $799.99</h4>
-                        <h4>In Stock: 03</h4>
-
-                    </div>
-                </div>
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
-                </a> 
-             </div>                  
+                    </div>                    
+                </div>                  
+            </div>
+            <a href="products">
+            <button id="lesson-2-button" class="btn">More Information</button>
+            </a> 
         </div>
-        <div class="cell large-4" id = "piano-3">   
-            <div class="row">
-                <div class="media-object">
-                    <div class="media-object-section">
-                        <div class="thumbnail">
-                            <img src="/images/music-lesson/music-lesson-piano.JPG" alt="Image" height="300" width="300">
+        <div id= "information-btn">
+            <div class="cell large-4" id = "piano-3">   
+                <div class="row">
+                    <div class="media-object">
+                        <div class="media-object-section">
+                            <div class="thumbnail">
+                                <img src="/images/music-lesson/music-lesson-piano.JPG" alt="Image" height="300" width="300">
+                            </div>
+                        </div>                   
+                        <div class="media-object-section" id = "piano-information">
+                            <h4>SKU: 600121</h4>
+                            <h3 id = "item-name">Music Lesson Piano</h3>
+                            <h4>Price: $999.99</h4>
+                            <h4>In Stock: 06</h4>
                         </div>
-                    </div>                   
-                    <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 100421</h4>
-                        <h3 id = "item-name">Music Lesson Piano</h3>
-                        <h4>Price: $999.99</h4>
-                        <h4>In Stock: 06</h4>
                     </div>
-                </div>
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
-                </a>
-             </div>                  
+                    
+                </div>                  
+            </div>
+            <a href="products">
+            <button id="lesson-3-button" class="btn">More Information</button>
+            </a>
         </div>
     </div>        
 </div>       
