--- a/views/logout.handlebars
+++ b/views/logout.handlebars
@@ -1,29 +1,48 @@
-<div class="grid-container fluid">
+<main>
+<div class="grid-container fluid" id = "main-display">
     <div class="grid-x grid-margin-x">
      
       <div class="cell large-3">
 
-        <img src="/images/piano-category.png" alt="Image" height="200" width="100%">        
-        <button class = "button medium" id = "piano-button">Piano Category</button>
-
+        <a href = "piano">
+        <img src="/images/piano-category.png" href = "piano" alt="Image" height="200" width="100%">        
+        <button class = "button medium" href = "piano" id = "piano-button">Piano Category</button>
+        </a>
+        <a href = "guitar">
         <img src="/images/guitar-amp-category.JPG" alt="Image" height="200" width="100%">        
         <button class = "button medium" id = "guitar-button">Guitar Category</button>
-
-        <img src="/images/keyboard-category.JPG" id = "keyboard-picture" alt="Image" height="200" width="100%">      
-        <button class = "button medium" id = "keyboard-button">Keyboard Category</button>
-        
+        </a>
+        <a href = "keyboard">
+        <img src="/images/keyboard-category.JPG" href = "keyboard" id = "keyboard-picture" alt="Image" height="200" width="100%">      
+        <button class = "button medium" id = "keyboard-button" href = "keyboard">Keyboard Category</button>
+        </a>
+        <button class = "button extended large" id = "advice-button">Visit the Store and See our Variety</button>
       </div>
-      
-      <div class="cell large-3 large-offset-6"  id = "right-column">
 
+      <div class="cell large-6"  id = "center-column">
+        
+        <img src="/images/placeholder_pic-6.jpg" alt="Image" height="100%" width="100%" id="home-main-pic">
+        <img src="/images/placeholder_pic-7.jpg" alt="Image" height="100%" width="100%" id="home-main-pic">
+
+      </div>
+
+      <div class="cell large-3"  id = "right-column">
+        <a href = "drum">
         <img src="/images/drum-percussion-category.JPG" alt="Image" height="200" width="100%">      
         <button class = "button medium" id = "drum-percussion-button">Drum and Percussion Category</button>
-
+        </a>
+        <a href = "sound">
         <img src="/images/live-sound-category.JPG" alt="Image" height="200" width="100%">        
         <button class = "button medium" id = "live-sound-button">Live Sound</button>
-
+        </a>
+        <a href = "lesson">
         <img src="/images/music-lesson-category.png" id = "music-lesson-picture" alt="Image" height="200" width="100%">      
         <button class = "button medium" id = "music-lesson-button">Music Lesson Category</button>
+        </a>
+        <button class = "button extended large" id = "advice-button-right">Buy Online Save Money</button>
+        
       </div>
     </div>
   </div>
+
+  </main>
