--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -16,25 +16,14 @@
         <img src="/images/keyboard-category.JPG" href = "keyboard" id = "keyboard-picture" alt="Image" height="200" width="100%">      
         <button class = "button medium" id = "keyboard-button" href = "keyboard">Keyboard Category</button>
         </a>
+        <button class = "button extended large" id = "advice-button">Visit the Store and See our Variety</button>
       </div>
 
       <div class="cell large-6"  id = "center-column">
         
-       
-        <img src="/images/placeholder_pic.JPG" alt="Image" height="100%" width="100%">
-        
-        <img src="/images/placeholder_pic-2.jfif" alt="Image" height="100px" width="100%">      
-          
-        
-        {{!-- <a href = "sound">
-        <img src="/images/live-sound-category.JPG" alt="Image" height="200" width="100%">        
-        <button class = "button medium" id = "live-sound-button">Live Sound</button>
-        </a>
-        <a href = "lesson">
-        <img src="/images/music-lesson-category.png" id = "music-lesson-picture" alt="Image" height="200" width="100%">      
-        <button class = "button medium" id = "music-lesson-button">Music Lesson Category</button>
-        </a> --}}
-        
+        <img src="/images/placeholder_pic-6.jpg" alt="Image" height="100%" width="100%" id="home-main-pic">
+        <img src="/images/placeholder_pic-7.jpg" alt="Image" height="100%" width="100%" id="home-main-pic">
+
       </div>
 
       <div class="cell large-3"  id = "right-column">
@@ -47,11 +36,13 @@
         <button class = "button medium" id = "live-sound-button">Live Sound</button>
         </a>
         <a href = "lesson">
-        <img src="/images/music-lesson-category-1.png" id = "music-lesson-picture" alt="Image" height="200" width="100%">      
+        <img src="/images/music-lesson-category.png" id = "music-lesson-picture" alt="Image" height="200" width="100%">      
         <button class = "button medium" id = "music-lesson-button">Music Lesson Category</button>
         </a>
+        <button class = "button extended large" id = "advice-button-right">Buy Online Save Money</button>
         
       </div>
     </div>
   </div>
+
   </main>
