--- a/views/sound.handlebars
+++ b/views/sound.handlebars
@@ -1,66 +1,71 @@
+<button class = "button expanded large" id = "category-header">Live Sound Category</button>
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
-        <div class="cell large-4" id = "piano-1">   
-            <div class="row">
-                <div class="media-object">
-                    <div class="media-object-section">
-                        <div class="thumbnail">
-                            <img src="/images/live-sound/yahama-40-channels.JPG" alt="Image" height="300" width="300">
+        <div id= "information-btn">
+            <div class="cell large-4" id = "piano-1">   
+                <div class="row">
+                    <div class="media-object">
+                        <div class="media-object-section">
+                            <div class="thumbnail">
+                                <img src="/images/live-sound/yahama-40-channels.JPG" alt="Image" height="300" width="300">
+                            </div>
+                        </div>                   
+                        <div class="media-object-section" id = "piano-information">
+                            <h4>SKU: 300101</h4>
+                            <h3 id = "item-name">Yamaha 4 Ch: console</h3>
+                            <h4>Price: $1699.99</h4>
+                            <h4>In Stock: 03</h4>
                         </div>
-                    </div>                   
-                    <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 10301</h4>
-                        <h3 id = "item-name">Yamaha 4 Channels console</h3>
-                        <h4>Price: $1699.99</h4>
-                        <h4>In Stock: 03</h4>
-
-                    </div>
-                </div> 
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
-                </a>            
+                    </div>                             
+                </div>
             </div>
+            <a href="products">
+            <button id="sound-1-button" class="btn">More Information</button>
+            </a>    
         </div>
-        <div class="cell large-4" id = "piano-2">   
-            <div class="row">
-                <div class="media-object">
-                    <div class="media-object-section">
-                        <div class="thumbnail">
-                            <img src="/images/live-sound/jbl-mixer-with-speakers.JPG" alt="Image" height="300" width="300">
+        <div id= "information-btn">
+            <div class="cell large-4" id = "piano-2">   
+                <div class="row">
+                    <div class="media-object">
+                        <div class="media-object-section">
+                            <div class="thumbnail">
+                                <img src="/images/live-sound/jbl-mixer-with-speakers.JPG" alt="Image" height="300" width="300">
+                            </div>
+                        </div>                   
+                        <div class="media-object-section" id = "piano-information">
+                            <h4>SKU: 300111</h4>
+                            <h3 id = "item-name">JBL Mixer-Speakers</h3>
+                            <h4>Price: $1267.99</h4>
+                            <h4>In Stock: 04</h4>
                         </div>
                     </div>                   
-                    <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 100311</h4>
-                        <h3 id = "item-name">JBL Mixer with Speakers</h3>
-                        <h4>Price: $1267.99</h4>
-                        <h4>In Stock: 04</h4>
-
-                    </div>
-                </div>
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
-                </a> 
-             </div>                  
+                </div>                  
+            </div>
+            <a href="products">
+            <button id="sound-2-button" class="btn">More Information</button>
+            </a> 
         </div>
-        <div class="cell large-4" id = "piano-3">   
-            <div class="row">
-                <div class="media-object">
-                    <div class="media-object-section">
-                        <div class="thumbnail">
-                            <img src="/images/live-sound/yamaha-mg16xu.JPG" alt="Image" height="300" width="300">
+        <div id= "information-btn">
+            <div class="cell large-4" id = "piano-3">   
+                <div class="row">
+                    <div class="media-object">
+                        <div class="media-object-section">
+                            <div class="thumbnail">
+                                <img src="/images/live-sound/yamaha-mg16xu.JPG" alt="Image" height="300" width="300">
+                            </div>
+                        </div>                   
+                        <div class="media-object-section" id = "piano-information">
+                            <h4>SKU: 300121</h4>
+                            <h3 id = "item-name">Yamaha MG16XU Mixer</h3>
+                            <h4>Price: $549.99</h4>
+                            <h4>In Stock: 04</h4>
                         </div>
-                    </div>                   
-                    <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 100321</h4>
-                        <h3 id = "item-name">Yamaha MG16XU 16-Channel Mixer</h3>
-                        <h4>Price: $549.99</h4>
-                        <h4>In Stock: 04</h4>
-                    </div>
-                </div>
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
-                </a>
-             </div>                  
+                    </div>                    
+                </div>                  
+            </div>
+            <a href="products">
+            <button id="sound-3-button" class="btn">More Information</button>
+            </a>
         </div>
     </div>        
 </div>       
