--- a/views/drum.handlebars
+++ b/views/drum.handlebars
@@ -19,8 +19,8 @@
                     </div>                               
                 </div>
             </div>
-            <a href="products">
-            <button id="drum-1-button" class="btn">More Information</button>
+            <a href="https://buy.stripe.com/test_5kAcN63N8aOs8dGcMV">
+            <button id="drum-1-button" class="btn">Buy Now</button>
             </a>  
         </div>
         <div id= "information-btn">
@@ -41,8 +41,8 @@
                     </div>                    
                 </div>                  
             </div>
-            <a href="products">
-            <button id="drum-2-button" class="btn">More Information</button>
+            <a href="https://buy.stripe.com/test_dR66oI5Vg8GkctW8wG">
+            <button id="drum-2-button" class="btn">Buy Now</button>
             </a> 
         </div>
         <div id= "information-btn">
@@ -64,8 +64,8 @@
                     
                 </div>                  
             </div>
-            <a href="products">
-            <button id="drum-3-button" class="btn">More Information</button>
+            <a href="https://buy.stripe.com/test_3cs5kE5Vg09O51u00b">
+            <button id="drum-3-button" class="btn">Buy Now</button>
             </a>
         </div>
     </div>        
