--- a/views/keyboard.handlebars
+++ b/views/keyboard.handlebars
@@ -19,8 +19,8 @@
                     </div>                                 
                 </div>
             </div>
-            <a href="products">
-            <button id="keyboard-1-button" class="btn">More Information</button>
+            <a href="https://buy.stripe.com/test_5kAdRa6Zkf4I9hK3ci">
+            <button id="keyboard-1-button" class="btn">Buy Now</button>
             </a>
         </div>
         <div id= "information-btn">    
@@ -41,8 +41,8 @@
                     </div>                    
                 </div>                  
             </div>
-            <a href="products">
-            <button id="keyboard-2-button" class="btn">More Information</button>
+            <a href="https://buy.stripe.com/test_5kA9AUdnI9Ko8dG5ks">
+            <button id="keyboard-2-button" class="btn">Buy NOw</button>
             </a> 
         </div>
         <div id= "information-btn">    
@@ -63,8 +63,8 @@
                     </div>                   
                 </div>                  
             </div>
-            <a href="products">
-            <button id="keyboard-2-button" class="btn">More Information</button>
+            <a href="https://buy.stripe.com/test_4gw28serMbSwalO007">
+            <button id="keyboard-2-button" class="btn">Buy Now</button>
             </a>
         </div>    
     </div>        
