--- a/views/lesson.handlebars
+++ b/views/lesson.handlebars
@@ -19,8 +19,8 @@
                     </div>                               
                 </div>
             </div>
-            <a href="products">
-            <button id="lesson-1-button" class="btn">More Information</button>
+            <a href="https://buy.stripe.com/test_4gwdRabfA5u8dy0dR3">
+            <button id="lesson-1-button" class="btn">Buy Now</button>
             </a> 
         </div>
         <div id= "information-btn">
@@ -41,8 +41,8 @@
                     </div>                    
                 </div>                  
             </div>
-            <a href="products">
-            <button id="lesson-2-button" class="btn">More Information</button>
+            <a href="https://buy.stripe.com/test_28o28sbfA7CgfG8dR2">
+            <button id="lesson-2-button" class="btn">Buy Now</button>
             </a> 
         </div>
         <div id= "information-btn">
@@ -64,8 +64,8 @@
                     
                 </div>                  
             </div>
-            <a href="products">
-            <button id="lesson-3-button" class="btn">More Information</button>
+            <a href="https://buy.stripe.com/test_4gwdRabfA5u8dy0dR3">
+            <button id="lesson-3-button" class="btn">Buy Now</button>
             </a>
         </div>
     </div>        
