--- a/views/piano.handlebars
+++ b/views/piano.handlebars
@@ -7,7 +7,7 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/piano/piano-large.jpg" alt="Image" height="400" width="350">
+                                <img src="/public/images/piano/piano-large.JPG" alt="Image" height="400" width="350">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
@@ -19,9 +19,16 @@
                     </div>                         
                 </div>                
             </div>
-            <a href="products">
+             <div class='product-description'> 
+             <a href="https://buy.stripe.com/test_aEU8wQerM9Ko9hKbII">
                <button id="piano-1-button" class="btn">More Information</button>
             </a> 
+             <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+            </div>
+                <a href="https://buy.stripe.com/test_aEU8wQerM9Ko9hKbII">
+                    
+                <button id="piano-2-button" class="btn">Buy Now</button>
+            </a>
        </div>       
        <div id= "information-btn">
             <div class="cell large-4" id = "piano-2">   
@@ -39,8 +46,14 @@
                             <h4>In Stock: 06</h4>
                         </div>
                     </div>                    
-                    <a href="product">
+                    <a href="https://buy.stripe.com/test_14k28sgzUbSw9hKaEF"></a>
                     <button id="piano-2-button" class="btn">More Information</button>
+                    </a> 
+                    <div class='product-description'> 
+                        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+                    </div>
+                    <a href="https://buy.stripe.com/test_14k28sgzUbSw9hKaEF">
+                    <button id="piano-2-button" class="btn">Buy Now</button>
                     </a> 
                 </div>                  
             </div>
@@ -61,8 +74,13 @@
                             <h4>In Stock: 02</h4>
                         </div>
                     </div>
-                    <a href="product">
-                    <button id="piano-3-button" class="btn">More Information</button>
+                     <div class='product-description'> 
+                         <button id="piano-3-button" class="btn">Produt Description</button>
+                        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+                    </div>
+                    <a href="https://buy.stripe.com/test_14k9AU2J4bSwgKcfZ0">
+                    
+                    <button id="piano-2-button" class="btn">Buy Now</button>
                     </a>
                 </div>                  
             </div>
