--- a/views/sound.handlebars
+++ b/views/sound.handlebars
@@ -19,8 +19,8 @@
                     </div>                             
                 </div>
             </div>
-            <a href="products">
-            <button id="sound-1-button" class="btn">More Information</button>
+            <a href="https://buy.stripe.com/test_eVaeVebfA3m0alOaET">
+            <button id="sound-1-button" class="btn">Buy Now</button>
             </a>    
         </div>
         <div id= "information-btn">
@@ -41,8 +41,8 @@
                     </div>                   
                 </div>                  
             </div>
-            <a href="products">
-            <button id="sound-2-button" class="btn">More Information</button>
+            <a href="https://buy.stripe.com/test_bIYbJ2abw8GkbpSeVa">
+            <button id="sound-2-button" class="btn">Buy Now</button>
             </a> 
         </div>
         <div id= "information-btn">
@@ -63,8 +63,8 @@
                     </div>                    
                 </div>                  
             </div>
-            <a href="products">
-            <button id="sound-3-button" class="btn">More Information</button>
+            <a href="https://buy.stripe.com/test_bIYbJ2abw8GkbpSeVa">
+            <button id="sound-3-button" class="btn">Buy Now</button>
             </a>
         </div>
     </div>        
