--- a/views/guitar.handlebars
+++ b/views/guitar.handlebars
@@ -19,9 +19,10 @@
                     </div>                              
                 </div>
             </div>
-            <a href="products">
-            <button id="guitar-1-button" class="btn">More Information</button>
-            </a>   
+            <a href="https://buy.stripe.com/test_bIYeVeerM8Gk8dG7sv">
+            <button id="guitar-1-button" class="btn">Buy Now</button>
+            </a>
+             </div>
         </div>
         <div id= "information-btn">   
             <div class="cell large-4" id = "piano-2">   
@@ -41,9 +42,10 @@
                     </div>  
                 </div>                  
             </div>
-            <a href="products">
-            <button id="guitar-2-button" class="btn">More Information</button>
-            </a> 
+             <a href="https://buy.stripe.com/test_bIY5kEfvQbSweC4aEI">
+            <button id="guitar-1-button" class="btn">Buy Now</button>
+
+             </div>
         </div> 
         <div id= "information-btn">    
             <div class="cell large-4" id = "piano-3">   
@@ -63,9 +65,9 @@
                     </div>                    
                 </div>                  
             </div>
-            <a href="products">
-            <button id="guitar-3-button" class="btn">More Information</button>
-            </a>
+             <a href="https://buy.stripe.com/test_5kAdRaerM5u8dy05kp">
+            <button id="guitar-1-button" class="btn"> Buy Now</button>
+             </div>
         </div>
     </div>        
 </div>       
